force-app/main/default/objects/Booking__c/fields/Payment_Received__c.field-meta.xml
<CustomField>
    <fullName>Payment_Received__c</fullName>
    <formula>( (RW_Total_Amount_Received_Without_GST__c)/Allotment_Premium__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Received %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>