force-app/main/default/objects/Booking__c/fields/Payment_Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Refund_Amount__c</fullName>
    <label>Payment Refund Amount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Forfeiture</fullName>
            </value>
            <value>
                <fullName>Partial Refund</fullName>
            </value>
            <value>
                <fullName>Internal Fund Transfer (Full)</fullName>
            </value>
            <value>
                <fullName>Internal Fund Transfer (Partial)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>