force-app/main/default/objects/Booking__c/fields/Payment_Reminder_Email_Count__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reminder_Email_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This keeps the track of the count of Payment follow-up email triggered from system</description>
    <inlineHelpText>This keeps the track of the count of Payment follow-up email triggered from system</inlineHelpText>
    <label>Payment Reminder Email Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>