force-app/main/default/objects/Booking__c/fields/Possession_Guidelines_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Possession_Guidelines_Sent_Date__c</fullName>
    <label>Possession Guidelines Sent Date</label>
    <type>Date</type>
</CustomField>