force-app/main/default/objects/Booking__c/fields/Primary_Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Applicant_Name__c</fullName>
    <formula>IF( CONTAINS(Opportunity__r.Primary_Name__c, &apos;..&apos;) ,  SUBSTITUTE(Opportunity__r.Primary_Name__c, &apos;..&apos;, &apos;. &apos;)  , Opportunity__r.Primary_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Applicant Name</label>
    <type>Text</type>
</CustomField>