force-app/main/default/objects/Booking__c/fields/Project_Head__c.field-meta.xml
<CustomField>
    <fullName>Project_Head__c</fullName>
    <formula>Project__r.IW_Project_Lead__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Head</label>
    <type>Text</type>
</CustomField>