force-app/main/default/objects/Booking__c/fields/Project_Waived_Limit__c.field-meta.xml
<CustomField>
    <fullName>Project_Waived_Limit__c</fullName>
    <formula>Project__r.Project_Location__r.Project_Waived_Limit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Waived Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>