force-app/main/default/objects/Booking__c/fields/Receipts__c.field-meta.xml
<CustomField>
    <fullName>Receipts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receipt</label>
    <referenceTo>Receipt__c</referenceTo>
    <relationshipLabel>Booking (Receipt)</relationshipLabel>
    <relationshipName>Booking</relationshipName>
    <type>Lookup</type>
</CustomField>