force-app/main/default/objects/Booking__c/fields/Received_Amtount__c.field-meta.xml
<CustomField>
    <fullName>Received_Amtount__c</fullName>
    <label>Received Amtount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>