force-app/main/default/objects/Booking__c/fields/Reference_Booking_9_90_Received__c.field-meta.xml
<CustomField>
    <fullName>Reference_Booking_9_90_Received__c</fullName>
    <formula>Customer_Reference_Opportunity__r.Booking__r.X9_90_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reference Booking 9.90 Received</label>
    <type>Text</type>
</CustomField>