force-app/main/default/objects/Booking__c/fields/Reference_Booking_X20_Received__c.field-meta.xml
<CustomField>
    <fullName>Reference_Booking_X20_Received__c</fullName>
    <formula>Customer_Reference_Opportunity__r.Booking__r.X20_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reference Booking 20% Received</label>
    <type>Checkbox</type>
</CustomField>