force-app/main/default/objects/Booking__c/fields/Reference_Registration_date_status__c.field-meta.xml
<CustomField>
    <fullName>Reference_Registration_date_status__c</fullName>
    <formula>IF(ISBLANK( Reference_Booking_Registration_Date__c ) ,&apos;Un-registered&apos;,&apos;Registered&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reference Registration date status</label>
    <type>Text</type>
</CustomField>