force-app/main/default/objects/Booking__c/fields/Referral__c.field-meta.xml
<CustomField>
    <fullName>Referral__c</fullName>
    <formula>IF(Referral_Benefit__c &gt;0, Referral_Benefit__c - Referral_Passback__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>