force-app/main/default/objects/Booking__c/fields/Referral_Amount_Cancellation_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Referral_Amount_Cancellation_Checklist__c</fullName>
    <label>Referral Amount(Cancellation Checklist)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>