force-app/main/default/objects/Booking__c/fields/Referral_Benefit__c.field-meta.xml
<CustomField>
    <fullName>Referral_Benefit__c</fullName>
    <label>Referral Benefit %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>