force-app/main/default/objects/Booking__c/fields/Referral_Benefit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Referral_Benefit_Amount__c</fullName>
    <formula>/*Referral_Benefit__c *  Allotment_Premium__c*/
Referral_Benefit__c *  Original_Agreement_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral Benefit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>