force-app/main/default/objects/Booking__c/fields/Referral_Discount__c.field-meta.xml
<CustomField>
    <fullName>Referral_Discount__c</fullName>
    <formula>ROUND(IF(Referral_Discount_Amount__c &gt; 0,(Referral_Discount_Amount__c / (Referral_Discount_Amount__c+Referral_Passback_Amount__c +Allotment_Premium__c) ), 0),4)</formula>
    <label>Referral Discount%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>