force-app/main/default/objects/Booking__c/fields/Referral_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Referral_Discount_Amount__c</fullName>
    <label>Referral Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>