force-app/main/default/objects/Booking__c/fields/Referral_IOM_Comments__c.field-meta.xml
<CustomField>
    <fullName>Referral_IOM_Comments__c</fullName>
    <label>Referral IOM Comments</label>
    <type>TextArea</type>
</CustomField>