force-app/main/default/objects/Booking__c/fields/Referral_IOM_Created__c.field-meta.xml
<CustomField>
    <fullName>Referral_IOM_Created__c</fullName>
    <label>Referral IOM Created</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>