force-app/main/default/objects/Booking__c/fields/Referral_IOM_Created_checkbox__c.field-meta.xml
<CustomField>
    <fullName>Referral_IOM_Created_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referral IOM Created</label>
    <type>Checkbox</type>
</CustomField>