force-app/main/default/objects/Booking__c/fields/Referral_Passback__c.field-meta.xml
<CustomField>
    <fullName>Referral_Passback__c</fullName>
    <formula>/*ROUND(IF(Referral_Passback_Amount__c &gt; 0,Referral_Passback_Amount__c / Allotment_Premium__c, 0),4)*/
/*ROUND(IF(Referral_Passback_Amount__c &gt; 0,Referral_Passback_Amount__c / (Original_Agreement_Value__c -Referral_Discount_Amount__c ), 0),4)*/

ROUND(IF(Referral_Passback_Amount__c &gt; 0,(if((Referral_Passback_Amount__c / (Original_Agreement_Value__c -Referral_Discount_Amount__c ))&gt;0.01,0.01,(Referral_Passback_Amount__c / (Original_Agreement_Value__c -Referral_Discount_Amount__c )))), 0),4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral Passback%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>