force-app/main/default/objects/Booking__c/fields/Referral_Passback_Amount__c.field-meta.xml
<CustomField>
    <fullName>Referral_Passback_Amount__c</fullName>
    <label>Referral Passback Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>