force-app/main/default/objects/Booking__c/fields/Refund_Date__c.field-meta.xml
<CustomField>
    <fullName>Refund_Date__c</fullName>
    <label>Refund Date</label>
    <type>Date</type>
</CustomField>