force-app/main/default/objects/Booking__c/fields/Refund_Handover_Document__c.field-meta.xml
<CustomField>
    <fullName>Refund_Handover_Document__c</fullName>
    <label>Refund Handover Document</label>
    <length>100</length>
    <type>Text</type>
</CustomField>