force-app/main/default/objects/Booking__c/fields/Refund_Handover_Document_Link__c.field-meta.xml
<CustomField>
    <fullName>Refund_Handover_Document_Link__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+  Refund_Handover_Document__c , &quot;Cancellation checklist&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refund Handover Document Link</label>
    <type>Text</type>
</CustomField>