force-app/main/default/objects/Booking__c/fields/Refund_handover_document_uploaded__c.field-meta.xml
<CustomField>
    <fullName>Refund_handover_document_uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refund handover document uploaded</label>
    <type>Checkbox</type>
</CustomField>