force-app/main/default/objects/Booking__c/fields/Refund_Instrument_Number__c.field-meta.xml
<CustomField>
    <fullName>Refund_Instrument_Number__c</fullName>
    <label>Refund Instrument Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>