force-app/main/default/objects/Booking__c/fields/Reg_No__c.field-meta.xml
<CustomField>
    <fullName>Reg_No__c</fullName>
    <label>Reg.No</label>
    <length>204</length>
    <type>Text</type>
</CustomField>