force-app/main/default/objects/Booking__c/fields/Registration_consultant__c.field-meta.xml
<CustomField>
    <fullName>Registration_consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration consultant</label>
    <referenceTo>Registration_consultant__c</referenceTo>
    <relationshipLabel>Booking</relationshipLabel>
    <relationshipName>Booking</relationshipName>
    <type>Lookup</type>
</CustomField>