force-app/main/default/objects/Booking__c/fields/Registration_date_status__c.field-meta.xml
<CustomField>
    <fullName>Registration_date_status__c</fullName>
    <formula>IF(ISBLANK(RW_Registration_Date__c) ,&apos;Un-Registered&apos;,&apos;Registered&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration date status</label>
    <type>Text</type>
</CustomField>