force-app/main/default/objects/Booking__c/fields/Registration_Due_Status__c.field-meta.xml
<CustomField>
    <fullName>Registration_Due_Status__c</fullName>
    <label>Registration Due Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Due</fullName>
            </value>
            <value>
                <fullName>Not Due</fullName>
                <default>true</default>
                <label>Not Due</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>