force-app/main/default/objects/Booking__c/fields/Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>Registration_Status__c</fullName>
    <formula>/*IF(X9_90_Received__c = &apos;Yes&apos; &amp;&amp; NOT(ISBLANK(RW_Registration_Date__c)) &amp;&amp; 
Reference_Booking_9_90_Received__c = &apos;Yes&apos; &amp;&amp;NOT(ISBLANK(Reference_Booking_Registration_Date__c )),
&apos;Due&apos;,&apos;Not Due&apos;)*/

IF( X20_Received__c == true &amp;&amp; NOT(ISBLANK(RW_Registration_Date__c)) &amp;&amp; Reference_Booking_X20_Received__c == true &amp;&amp; NOT(ISBLANK(Reference_Booking_Registration_Date__c)),&apos;Due&apos;,&apos;Not Due&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IOM Due Status</label>
    <type>Text</type>
</CustomField>