force-app/main/default/objects/Booking__c/fields/Resale_Status__c.field-meta.xml
<CustomField>
    <fullName>Resale_Status__c</fullName>
    <label>Resale Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Unsold</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>