force-app/main/default/objects/Booking__c/fields/Retention_Date__c.field-meta.xml
<CustomField>
    <fullName>Retention_Date__c</fullName>
    <label>Retention Date</label>
    <type>Date</type>
</CustomField>