force-app/main/default/objects/Booking__c/fields/Retention_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Retention_Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retention Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BookingjASY</relationshipName>
    <type>Lookup</type>
</CustomField>