force-app/main/default/objects/Booking__c/fields/RM_Name__c.field-meta.xml
<CustomField>
    <fullName>RM_Name__c</fullName>
    <formula>Unit_No__r.Relationship_Manager__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RM Name</label>
    <type>Text</type>
</CustomField>