force-app/main/default/objects/Booking__c/fields/RW_Actual_Possession_Date__c.field-meta.xml
<CustomField>
    <fullName>RW_Actual_Possession_Date__c</fullName>
    <label>Actual Possession Date</label>
    <type>Date</type>
</CustomField>