force-app/main/default/objects/Booking__c/fields/RW_AFS_sent_to_registration_office_date__c.field-meta.xml
<CustomField>
    <fullName>RW_AFS_sent_to_registration_office_date__c</fullName>
    <label>AFS sent to registration office date</label>
    <type>Date</type>
</CustomField>