force-app/main/default/objects/Booking__c/fields/RW_AFS_to_registration_office_status__c.field-meta.xml
<CustomField>
    <fullName>RW_AFS_to_registration_office_status__c</fullName>
    <label>AFS sent to registration office status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AFS document shared</fullName>
            </value>
            <value>
                <fullName>AFS document Not yet shared</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>