force-app/main/default/objects/Booking__c/fields/RW_Agreement_for_Sales_document__c.field-meta.xml
<CustomField>
    <fullName>RW_Agreement_for_Sales_document__c</fullName>
    <label>Agreement for Sales document</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Generated</fullName>
            </value>
            <value>
                <fullName>Not yet generated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>