force-app/main/default/objects/Booking__c/fields/RW_Agreement_Possession_Date__c.field-meta.xml
<CustomField>
    <fullName>RW_Agreement_Possession_Date__c</fullName>
    <label>Possession Date As per Agreement</label>
    <type>Date</type>
</CustomField>