force-app/main/default/objects/Booking__c/fields/RW_Agreement_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>RW_Agreement_Rejection_Reason__c</fullName>
    <label>Agreement Rejection Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>