force-app/main/default/objects/Booking__c/fields/RW_Agreement_Status__c.field-meta.xml
<CustomField>
    <fullName>RW_Agreement_Status__c</fullName>
    <label>Agreement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>