force-app/main/default/objects/Booking__c/fields/RW_Booking_Confirmed_Date__c.field-meta.xml
<CustomField>
    <fullName>RW_Booking_Confirmed_Date__c</fullName>
    <label>Booking Confirmed Date</label>
    <type>Date</type>
</CustomField>