force-app/main/default/objects/Booking__c/fields/RW_BRL_Number__c.field-meta.xml
<CustomField>
    <fullName>RW_BRL_Number__c</fullName>
    <label>BRL Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>