force-app/main/default/objects/Booking__c/fields/RW_Cancellation_initiated_by__c.field-meta.xml
<CustomField>
    <fullName>RW_Cancellation_initiated_by__c</fullName>
    <label>Cancellation initiated by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Customer</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Company</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>