force-app/main/default/objects/Booking__c/fields/RW_Challan_Status__c.field-meta.xml
<CustomField>
    <fullName>RW_Challan_Status__c</fullName>
    <label>Challan Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Challan Received</fullName>
            </value>
            <value>
                <fullName>Challan Not Received</fullName>
            </value>
            <value>
                <fullName>Challan Pending</fullName>
                <default>true</default>
                <label>Challan Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>