force-app/main/default/objects/Booking__c/fields/RW_Digitally_Accepted_On__c.field-meta.xml
<CustomField>
    <fullName>RW_Digitally_Accepted_On__c</fullName>
    <label>Digitally Accepted On</label>
    <type>DateTime</type>
</CustomField>