force-app/main/default/objects/Booking__c/fields/RW_Email_Reminder_Count__c.field-meta.xml
<CustomField>
    <fullName>RW_Email_Reminder_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Email Reminder Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>