force-app/main/default/objects/Booking__c/fields/RW_Expected_SDR_Date__c.field-meta.xml
<CustomField>
    <fullName>RW_Expected_SDR_Date__c</fullName>
    <label>Expected SDR Date</label>
    <type>Date</type>
</CustomField>