force-app/main/default/objects/Booking__c/fields/RW_GST_On_Interest__c.field-meta.xml
<CustomField>
    <fullName>RW_GST_On_Interest__c</fullName>
    <label>GST On Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>