force-app/main/default/objects/Booking__c/fields/RW_Index_2__c.field-meta.xml
<CustomField>
    <fullName>RW_Index_2__c</fullName>
    <label>Index 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>