force-app/main/default/objects/Booking__c/fields/RW_Key_handover_date__c.field-meta.xml
<CustomField>
    <fullName>RW_Key_handover_date__c</fullName>
    <label>Key handover date</label>
    <type>Date</type>
</CustomField>