force-app/main/default/objects/Booking__c/fields/RW_Last_Registration_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>RW_Last_Registration_Reminder_Sent__c</fullName>
    <label>Last Registration Reminder Sent</label>
    <type>Date</type>
</CustomField>