force-app/main/default/objects/Booking__c/fields/RW_Last_Reminder_letter_sent_date__c.field-meta.xml
<CustomField>
    <fullName>RW_Last_Reminder_letter_sent_date__c</fullName>
    <label>Last Reminder letter sent date</label>
    <type>Date</type>
</CustomField>