force-app/main/default/objects/Booking__c/fields/RW_Last_SDR_Received__c.field-meta.xml
<CustomField>
    <fullName>RW_Last_SDR_Received__c</fullName>
    <label>Last SDR Received</label>
    <type>Date</type>
</CustomField>