force-app/main/default/objects/Booking__c/fields/RW_Loan_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>RW_Loan_Account_Number__c</fullName>
    <label>Loan Account Number</label>
    <length>17</length>
    <type>Text</type>
</CustomField>