force-app/main/default/objects/Booking__c/fields/RW_Loan_Bank__c.field-meta.xml
<CustomField>
    <fullName>RW_Loan_Bank__c</fullName>
    <label>Loan Bank</label>
    <length>100</length>
    <type>Text</type>
</CustomField>