force-app/main/default/objects/Booking__c/fields/RW_Loan_Sanction_Date__c.field-meta.xml
<CustomField>
    <fullName>RW_Loan_Sanction_Date__c</fullName>
    <label>Loan Sanction Date</label>
    <type>Date</type>
</CustomField>