force-app/main/default/objects/Booking__c/fields/RW_Market_Values__c.field-meta.xml
<CustomField>
    <fullName>RW_Market_Values__c</fullName>
    <label>Market Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>