force-app/main/default/objects/Booking__c/fields/RW_Next_Demand_Date__c.field-meta.xml
<CustomField>
    <fullName>RW_Next_Demand_Date__c</fullName>
    <label>Next Demand Date</label>
    <type>Date</type>
</CustomField>