force-app/main/default/objects/Booking__c/fields/RW_Noc_Generated_Date__c.field-meta.xml
<CustomField>
    <fullName>RW_Noc_Generated_Date__c</fullName>
    <label>Noc Generated Date</label>
    <type>Date</type>
</CustomField>