force-app/main/default/objects/Booking__c/fields/RW_Pending_SDR_Payable__c.field-meta.xml
<CustomField>
    <fullName>RW_Pending_SDR_Payable__c</fullName>
    <formula>RW_Total_SDR_Amount_Payable__c -  RW_Total_Amount_Recieved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending SDR Payable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>