force-app/main/default/objects/Booking__c/fields/RW_Registration_Ageing__c.field-meta.xml
<CustomField>
    <fullName>RW_Registration_Ageing__c</fullName>
    <formula>IF( ISPICKVAL(RW_Registration_Status__c, &apos;Registration Completed&apos;) , if((RW_Registration_Date__c - DATEVALUE(Booking_Date__c)-45&gt;0),RW_Registration_Date__c - DATEVALUE(Booking_Date__c)-45,0), 

if((TODAY()- DATEVALUE(Booking_Date__c)-45&gt;0),TODAY()- DATEVALUE(Booking_Date__c)-45, 0))</formula>
    <label>Registration Ageing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>