force-app/main/default/objects/Booking__c/fields/RW_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>RW_Registration_Date__c</fullName>
    <label>Registration Date</label>
    <type>Date</type>
</CustomField>