force-app/main/default/objects/Booking__c/fields/RW_Registration_Done__c.field-meta.xml
<CustomField>
    <fullName>RW_Registration_Done__c</fullName>
    <label>Registration Done</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>