force-app/main/default/objects/Booking__c/fields/RW_Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>RW_Registration_Status__c</fullName>
    <label>Registration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registration Completed</fullName>
            </value>
            <value>
                <fullName>Registration Pending</fullName>
                <default>true</default>
                <label>Registration Pending</label>
            </value>
            <value>
                <fullName>Registration Scheduled</fullName>
            </value>
            <value>
                <fullName>Registration Received</fullName>
                <isActive>false</isActive>
                <label>Registration Received</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>