force-app/main/default/objects/Booking__c/fields/RW_Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>RW_Registration_Type__c</fullName>
    <label>Registration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E-Registration</fullName>
            </value>
            <value>
                <fullName>Offline Registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>