force-app/main/default/objects/Booking__c/fields/RW_Remarks__c.field-meta.xml
<CustomField>
    <fullName>RW_Remarks__c</fullName>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>