force-app/main/default/objects/Booking__c/fields/RW_RM_Email__c.field-meta.xml
<CustomField>
    <fullName>RW_RM_Email__c</fullName>
    <formula>Unit_No__r.Relationship_Manager__r.User__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RM Email</label>
    <type>Text</type>
</CustomField>