force-app/main/default/objects/Booking__c/fields/RW_ROC_Date__c.field-meta.xml
<CustomField>
    <fullName>RW_ROC_Date__c</fullName>
    <label>ROC Date</label>
    <type>Date</type>
</CustomField>