force-app/main/default/objects/Booking__c/fields/RW_Schedule_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>RW_Schedule_Registration_Date__c</fullName>
    <label>Schedule Registration Date</label>
    <type>Date</type>
</CustomField>