force-app/main/default/objects/Booking__c/fields/RW_SDR_Ageing__c.field-meta.xml
<CustomField>
    <fullName>RW_SDR_Ageing__c</fullName>
    <formula>IF( ISPICKVAL(RW_SDR_Status__c, &apos;Received&apos;) , RW_Last_SDR_Received__c - DATEVALUE(Booking_Date__c), TODAY()- DATEVALUE(Booking_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SDR Ageing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>