force-app/main/default/objects/Booking__c/fields/RW_SDR_Delay_Reason__c.field-meta.xml
<CustomField>
    <fullName>RW_SDR_Delay_Reason__c</fullName>
    <label>SDR Delay Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Booking</fullName>
                <default>true</default>
                <label>New Booking</label>
            </value>
            <value>
                <fullName>Customer insisting on full IOD and/or CC</fullName>
            </value>
            <value>
                <fullName>NRI - No POA</fullName>
            </value>
            <value>
                <fullName>Customer considering unit change</fullName>
            </value>
            <value>
                <fullName>Customer considering project change</fullName>
            </value>
            <value>
                <fullName>Customer considering cancellation</fullName>
            </value>
            <value>
                <fullName>Customer keen on auspicious dates</fullName>
            </value>
            <value>
                <fullName>No Funds for SDR</fullName>
            </value>
            <value>
                <fullName>Main Applicant Deceased</fullName>
            </value>
            <value>
                <fullName>SDR and/or NCF Awaited</fullName>
            </value>
            <value>
                <fullName>ROC Awaited</fullName>
            </value>
            <value>
                <fullName>Agreement not ready</fullName>
            </value>
            <value>
                <fullName>POA Signature Pending</fullName>
            </value>
            <value>
                <fullName>Approved Registration Deviation</fullName>
            </value>
            <value>
                <fullName>Awaiting Loan sanction</fullName>
            </value>
            <value>
                <fullName>Customer delaying</fullName>
            </value>
            <value>
                <fullName>Customer Not reachable/ Responding</fullName>
            </value>
            <value>
                <fullName>Loan Eligibility issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>